[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemies/Enemy1.gd" type="Script" id=1]
[ext_resource path="res://Sounds/146730__fins__shoot.ogg" type="AudioStream" id=2]

[sub_resource type="SphereMesh" id=1]

radius = 1.0
height = 2.0
radial_segments = 8
rings = 4
is_hemisphere = false

[sub_resource type="SpatialMaterial" id=2]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 1, 0, 0, 1 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.0
roughness_texture_channel = 0
emission_enabled = true
emission = Color( 0.746094, 0.198181, 0.198181, 1 )
emission_energy = 0.4
emission_operator = 0
emission_on_uv2 = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Albedo", "Emission", "Flags", "Vertex Color" ]

[sub_resource type="SphereShape" id=3]

radius = 1000.0

[node name="Enemy" type="Spatial" index="0"]

script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="." index="0"]

transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = SubResource( 2 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Area" type="Area" parent="." index="1"]

input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 4
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape" type="CollisionShape" parent="Area" index="0"]

shape = SubResource( 3 )
disabled = false

[node name="Reload" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.4
one_shot = false
autostart = false

[node name="Shoot" type="AudioStreamPlayer3D" parent="." index="3"]

stream = ExtResource( 2 )
attenuation_model = 0
unit_db = 15.0
unit_size = 10.0
max_db = -3.0
autoplay = false
max_distance = 0.0
out_of_range_mode = 0
bus = "Master"
area_mask = 1
emission_angle_enabled = false
emission_angle_degrees = 45.0
emission_angle_filter_attenuation_db = -12.0
attenuation_filter_cutoff_hz = 5000.0
attenuation_filter_db = -30.0
doppler_tracking = 1
_sections_unfolded = [ "Attenuation Filter", "Emission Angle" ]

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]

[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]

[connection signal="timeout" from="Reload" to="." method="_on_Reload_timeout"]


